force-app/main/default/objects/Expense_Income__c.object
<CustomObject>
    <description>Custom object related to the property management and to contracts w/income to act as a cash flow statement.</description>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <summarizedField>Expense_Payment_Request__c.Invoice_Payment_Amount__c</summarizedField>
        <summaryForeignKey>Expense_Payment_Request__c.Property_Management_Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Assessed_Taxable_Value_of_Fixtures__c</fullName>
        <label>Assessed/Taxable Value of Fixtures</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assessed_Taxable_Value_of_Improvements__c</fullName>
        <label>Assessed/Taxable Value of Improvements</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assessed_Taxable_Value_of_Land__c</fullName>
        <label>Assessed/Taxable Value of Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assessor_Parcel_Numbers__c</fullName>
        <inlineHelpText>Please delete all the APN&apos;s that are not related to this invoice.</inlineHelpText>
        <label>Assessor Parcel Number(s)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Balance_Remaining__c</fullName>
        <formula>Expense_Amount__c-Invoices_Paid_to_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Center_Name_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Center Name &amp; Number</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The cost center you have searched for is no longer active or you have submitted an invalid entry. Please consult with your Finance or Operations department for questions.</errorMessage>
            <filterItems>
                <field>Budget_Center_Names_Numbers__c.Status__c</field>
                <operation>notContain</operation>
                <value>Inactive</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Budget_Center_Names_Numbers__c</referenceTo>
        <relationshipLabel>Income &amp; Expenses</relationshipLabel>
        <relationshipName>Income_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capital_Improvement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Capital Improvement associated with this expense.</inlineHelpText>
        <label>Capital Improvement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Capital_Improvement__c.Property_Management_Unit__c</field>
                <operation>equals</operation>
                <valueField>$Source.Property_Managment_Name__c</valueField>
            </filterItems>
            <infoMessage>Limited to the capital improvements associated with the selected property management unit.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Capital_Improvement__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check_Number__c</fullName>
        <inlineHelpText>Enter the check number or a unique number identifying the check received.</inlineHelpText>
        <label>Check Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Manager__c</fullName>
        <formula>Contract_Number__r.Owner.FirstName &amp; &quot; &quot; &amp;  Contract_Number__r.Owner.LastName</formula>
        <inlineHelpText>This is a read-only field.  The Contract Manager&apos;s name is automatically entered into this field.</inlineHelpText>
        <label>Contract Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Name__c</fullName>
        <formula>Contract_Number__r.Name</formula>
        <label>Contract Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Number</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Income</relationshipLabel>
        <relationshipName>Contract_Income</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>County_Global__c</fullName>
        <label>County</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>County</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>County_Wide_Tax_Amount_s__c</fullName>
        <label>County Wide Tax Amount(s)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>Changed to Global Picklist</description>
        <label>XDeprecated: County</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alameda</fullName>
                </value>
                <value>
                    <fullName>Alpine</fullName>
                </value>
                <value>
                    <fullName>Amador</fullName>
                </value>
                <value>
                    <fullName>Butte</fullName>
                </value>
                <value>
                    <fullName>Calaveras</fullName>
                </value>
                <value>
                    <fullName>Colusa</fullName>
                </value>
                <value>
                    <fullName>Contra Costa</fullName>
                </value>
                <value>
                    <fullName>Del Norte</fullName>
                </value>
                <value>
                    <fullName>El Dorado</fullName>
                </value>
                <value>
                    <fullName>Fresno</fullName>
                </value>
                <value>
                    <fullName>Glenn</fullName>
                </value>
                <value>
                    <fullName>Humboldt</fullName>
                </value>
                <value>
                    <fullName>Imperial</fullName>
                </value>
                <value>
                    <fullName>Inyo</fullName>
                </value>
                <value>
                    <fullName>Kern</fullName>
                </value>
                <value>
                    <fullName>Kings</fullName>
                </value>
                <value>
                    <fullName>Lake</fullName>
                </value>
                <value>
                    <fullName>Lassen</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Madera</fullName>
                </value>
                <value>
                    <fullName>Marin</fullName>
                </value>
                <value>
                    <fullName>Mariposa</fullName>
                </value>
                <value>
                    <fullName>Mendocino</fullName>
                </value>
                <value>
                    <fullName>Merced</fullName>
                </value>
                <value>
                    <fullName>Modoc</fullName>
                </value>
                <value>
                    <fullName>Mono</fullName>
                </value>
                <value>
                    <fullName>Monterey</fullName>
                </value>
                <value>
                    <fullName>Napa</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Crop_Year__c</fullName>
        <label>Crop Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Check__c</fullName>
        <inlineHelpText>Enter the date the check was received.</inlineHelpText>
        <label>Date of Check</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <inlineHelpText>Enter the due date. For property taxes, due dates are December 10 and April 10.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Notification_Sent_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the name of the person to send an email notification to review and approve the contract income.</inlineHelpText>
        <label>Email Notification Sent To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Income_Expenses3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expense_Amount__c</fullName>
        <inlineHelpText>Enter in the total expense amount of the invoice(s). For property taxes, batch tax bills by property and enter in the total expense amount (both installments) of the tax bills.</inlineHelpText>
        <label>Expense Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Due_Date_Reminder__c</fullName>
        <inlineHelpText>Please select the number of days you would like to receive advance notice of the approaching expense due date and you will receive a reminder in an email notification.</inlineHelpText>
        <label>Expense Due Date Reminder</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>15 Days</fullName>
                </value>
                <value>
                    <fullName>30 Days</fullName>
                </value>
                <value>
                    <fullName>45 Days</fullName>
                </value>
                <value>
                    <fullName>60 Days</fullName>
                </value>
                <value>
                    <fullName>90 Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fees_Penalties__c</fullName>
        <inlineHelpText>Enter in the amount of incurred fees or penalties.</inlineHelpText>
        <label>Fees/Penalties</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <inlineHelpText>Select the fiscal year.</inlineHelpText>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY08</fullName>
                </value>
                <value>
                    <fullName>FY09</fullName>
                </value>
                <value>
                    <fullName>FY10</fullName>
                </value>
                <value>
                    <fullName>FY11</fullName>
                </value>
                <value>
                    <fullName>FY12</fullName>
                </value>
                <value>
                    <fullName>FY13</fullName>
                </value>
                <value>
                    <fullName>FY14</fullName>
                </value>
                <value>
                    <fullName>FY15</fullName>
                </value>
                <value>
                    <fullName>FY16</fullName>
                </value>
                <value>
                    <fullName>FY17</fullName>
                </value>
                <value>
                    <fullName>FY18</fullName>
                </value>
                <value>
                    <fullName>FY19</fullName>
                </value>
                <value>
                    <fullName>FY20</fullName>
                </value>
                <value>
                    <fullName>FY21</fullName>
                </value>
                <value>
                    <fullName>FY22</fullName>
                </value>
                <value>
                    <fullName>FY23</fullName>
                </value>
                <value>
                    <fullName>FY24</fullName>
                </value>
                <value>
                    <fullName>FY25</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Income_Amount__c</fullName>
        <label>Income Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Description__c</fullName>
        <label>Income Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Income_Total__c</fullName>
        <formula>Income_Amount__c +  Fees_Penalties__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Income Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoices_Paid_to_Date__c</fullName>
        <label>Invoices Paid to Date</label>
        <summarizedField>Expense_Payment_Request__c.Invoice_Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Expense_Payment_Request__c.Payment_Request_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense_Payment_Request__c.Property_Management_Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Operations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please enter the name of the Operations Associate who is required to review and approve the income or expense.</inlineHelpText>
        <label>Operations</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Income_Expenses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Assessed_Taxable_Value_Explanation__c</fullName>
        <label>Other Assessed/Taxable Value Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Assessed_Taxable_Value__c</fullName>
        <label>Other Assessed/Taxable Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Exemption_Amount_s__c</fullName>
        <label>Other Exemption Amount(s)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Penalties_Interest_Amount__c</fullName>
        <label>Penalties/Interest Amount(s)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Penalties_Interest_Explanation__c</fullName>
        <inlineHelpText>Please provide an explanation about incurred penalties and/or interest.</inlineHelpText>
        <label>Penalties/Interest Explanation</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Penalties_Interest__c</fullName>
        <inlineHelpText>If Yes is selected, please include an explanation in the narrative field below detailing why penalties and/or interest has been incurred.</inlineHelpText>
        <label>Penalties/Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Director_Program_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select the name of the Project Director or Program Manager who is required to review and approve the income or expense.</inlineHelpText>
        <label>Project Director/Program Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Income_Expenses2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_ID_1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Project and Award ID to which income or payment is posted.</description>
        <inlineHelpText>Project and Award ID to which income or payment is posted.</inlineHelpText>
        <label>1) Project/Award IDs</label>
        <referenceTo>Project_IDs__c</referenceTo>
        <relationshipLabel>Income &amp; Expenses</relationshipLabel>
        <relationshipName>Income_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_ID_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>2) Project/Award ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project_IDs__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <infoMessage>Please select and &quot;active&quot; Project ID.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Project_IDs__c</referenceTo>
        <relationshipLabel>Income &amp; Expenses (2) Project/Award ID)</relationshipLabel>
        <relationshipName>Income_Expenses2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_ID_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>3) Project/Award ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project_IDs__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <infoMessage>Please select an &quot;active&quot; Project ID.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Project_IDs__c</referenceTo>
        <relationshipLabel>Income &amp; Expenses (3) Project/Award ID)</relationshipLabel>
        <relationshipName>Income_Expenses3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Interest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Property Interest if related to an individual interest rather than the Property Management Unit.</inlineHelpText>
        <label>Property Interest</label>
        <referenceTo>Property_Interest__c</referenceTo>
        <relationshipLabel>Income &amp; Expenses</relationshipLabel>
        <relationshipName>Income_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Managment_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property Management Name</label>
        <referenceTo>Property_Management__c</referenceTo>
        <relationshipLabel>Income &amp; Expenses</relationshipLabel>
        <relationshipName>Income_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Router__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Router</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Income_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Notification_Email_to_Contact_Incom__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select the check box to send a notification email to alert staff of the new income item.</inlineHelpText>
        <label>Send Notification Email to Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Notification_Email_to_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select the check box to send a notification email to alert staff of the new expense item.</inlineHelpText>
        <label>Send Notification Email to Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Assessments_Fixed_Charges__c</fullName>
        <inlineHelpText>Enter in the amount of the property&apos;s special assessments and fixed changes.</inlineHelpText>
        <label>Special Assessments &amp; Fixed Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <inlineHelpText>Please include a note describing the details of the expense or special instructions.</inlineHelpText>
        <label>Special Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Routing for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Year__c</fullName>
        <label>Tax Year</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>2008-2009</fullName>
                </value>
                <value>
                    <fullName>2009-2010</fullName>
                </value>
                <value>
                    <fullName>2010-2011</fullName>
                </value>
                <value>
                    <fullName>2011-2012</fullName>
                </value>
                <value>
                    <fullName>2012-2013</fullName>
                </value>
                <value>
                    <fullName>2013-2014</fullName>
                </value>
                <value>
                    <fullName>2014-2015</fullName>
                </value>
                <value>
                    <fullName>2015-2016</fullName>
                </value>
                <value>
                    <fullName>2016-2017</fullName>
                </value>
                <value>
                    <fullName>2017-2018</fullName>
                </value>
                <value>
                    <fullName>2018-2019</fullName>
                </value>
                <value>
                    <fullName>2019-2020</fullName>
                </value>
                <value>
                    <fullName>2020-2021</fullName>
                </value>
                <value>
                    <fullName>2021-2022</fullName>
                </value>
                <value>
                    <fullName>2022-2023</fullName>
                </value>
                <value>
                    <fullName>2023-2024</fullName>
                </value>
                <value>
                    <fullName>2024-2025</fullName>
                </value>
                <value>
                    <fullName>2025-2026</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Assessed_Tax_Value_Property_ies__c</fullName>
        <formula>(Assessed_Taxable_Value_of_Land__c + Assessed_Taxable_Value_of_Improvements__c +  Assessed_Taxable_Value_of_Fixtures__c + Other_Assessed_Taxable_Value__c )-( Welfare_Exemption_Amount__c+ Other_Exemption_Amount_s__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a read-only field that is sum of the Assessed/Taxable Value of Land, Assessed/Taxable Value of Improvements, Assessed/Taxable Value of Fixtures, Other Assessed/Taxable Value, and subtracted by the Welfare Exemption Amount.</inlineHelpText>
        <label>Total Assessed/Tax Value Property(ies)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Property_Tax_Liability_2__c</fullName>
        <formula>Special_Assessments_Fixed_Charges__c + Penalties_Interest_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Property Tax Liability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Easement Income</fullName>
                </value>
                <value>
                    <fullName>Endowment Income</fullName>
                </value>
                <value>
                    <fullName>Lease Income</fullName>
                </value>
                <value>
                    <fullName>License Income</fullName>
                </value>
                <value>
                    <fullName>Other Income</fullName>
                </value>
                <value>
                    <fullName>Property Tax Expense</fullName>
                </value>
                <value>
                    <fullName>Supplemental Property Tax Expense</fullName>
                </value>
                <value>
                    <fullName>Maintenance Expense</fullName>
                </value>
                <value>
                    <fullName>Stewardship Expense</fullName>
                </value>
                <value>
                    <fullName>Utility Expense</fullName>
                </value>
                <value>
                    <fullName>Water Fee Expense</fullName>
                </value>
                <value>
                    <fullName>Other Expense</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Welfare_Exemption_Amount__c</fullName>
        <inlineHelpText>Enter in the total welfare exemption amount of the property.  If there are no exemptions, enter in $0.</inlineHelpText>
        <label>Welfare Exemption Amount(s)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1_Activity__c</fullName>
        <inlineHelpText>Enter 6 digit activity code</inlineHelpText>
        <label>1) Activity</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1_Amount_allocated__c</fullName>
        <description>Only required on TNC transactions. Not for Bird Returns, CF&amp;R or RD.</description>
        <inlineHelpText>This field is required. The sum of 1) Amount Allocated, 2) Amount Allocated, and 3) Amount Allocated must equal the “Income/Expense Amount” that is entered above</inlineHelpText>
        <label>1) Amount Allocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2_Activity__c</fullName>
        <inlineHelpText>Enter 6 digit activity code</inlineHelpText>
        <label>2) Activity</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2_Amount_Allocated__c</fullName>
        <inlineHelpText>The sum of 1) Amount Allocated, 2) Amount Allocated, and 3) Amount Allocated must equal the “Income/Expense Amount” that is entered above.</inlineHelpText>
        <label>2) Amount Allocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3_Activity__c</fullName>
        <inlineHelpText>Enter 6 digit activity code</inlineHelpText>
        <label>3) Activity</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3_Amount_Allocated__c</fullName>
        <inlineHelpText>The sum of 1) Amount Allocated, 2) Amount Allocated, and 3) Amount Allocated must equal the “Income/Expense Amount” that is entered above.</inlineHelpText>
        <label>3) Amount Allocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Income &amp; Expense</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Income/Expense-{0000}</displayFormat>
        <label>Income/Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Income &amp; Expenses</pluralLabel>
    <recordTypes>
        <fullName>CFR_RD_Non_RE_Contract_Income</fullName>
        <active>true</active>
        <description>CF&amp;R / RD Non-Real Estate Contract Income.</description>
        <label>CFR_RD Non-RE Contract Income</label>
    </recordTypes>
    <recordTypes>
        <fullName>CFR_RD_RE_Contract_Income</fullName>
        <active>true</active>
        <description>CF&amp;R / RD Real Estate Contract Income.</description>
        <label>CFR_RD RE Contract Income</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contract_Expense</fullName>
        <active>false</active>
        <description>Select this record type to create an expense related to a non-real estate contract.</description>
        <label>Contract Expense</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contract_Income</fullName>
        <active>true</active>
        <description>Select this record type to create an income related to a real estate lease/license contract.</description>
        <label>Contract Income</label>
    </recordTypes>
    <recordTypes>
        <fullName>Property_Management_Expense</fullName>
        <active>true</active>
        <description>Select this record type to create an expense related to a property on the property management record.</description>
        <label>Property Management Expense</label>
    </recordTypes>
    <recordTypes>
        <fullName>Property_Management_Income</fullName>
        <active>true</active>
        <description>Select this record type to create an income related to a property on the property management record.</description>
        <label>Property Management Income</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>APNs_Required_Property_Tax_Payment</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISPICKVAL (Type__c , &quot;Property Tax Expense&quot;) ,
ISBLANK ( Assessor_Parcel_Numbers__c  ) )</errorConditionFormula>
        <errorMessage>Please verify that the APN&apos;s match the APN&apos;s on the property tax payment invoice.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>County</fullName>
        <active>true</active>
        <description>If expense type &quot;Property Tax&quot; is selected then &quot;County&quot; is required.</description>
        <errorConditionFormula>AND (ISPICKVAL (Type__c , &quot;Property Tax Expense&quot;) ,
ISBLANK ( County_Global__c ) )</errorConditionFormula>
        <errorMessage>For tax payments, you must select a County.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Penalties_Interest_Explanation</fullName>
        <active>true</active>
        <errorConditionFormula>AND (Penalties_Interest_Amount__c  &gt; 0 ,
ISBLANK (Penalties_Interest_Explanation__c ) )</errorConditionFormula>
        <errorMessage>Please provide an explanation why penalties and/or interest have been incurred.</errorMessage>
    </validationRules>
</CustomObject>